[project]
name = "quantum_net"
version = "0.1.0"
description = "A quantum-inspired neural network for efficient text processing"
authors = [
    { name = "Joseph Blazick", email = "joe@pearllabs.ai" }
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.6",
    "mypy>=1.0.0",
    "ipykernel>=6.0.0",  # 
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

